@@ -15,6 +15,7 @@ Verilator 5.039 devel
 
 * Add ENUMITEMWIDTH error, and apply to X-extended and ranged values.
 * Add NOEFFECT warning, replacing previous `foreach` error.
+* Add SPECIFYIGN warning for specify constructs that were previously silently ignored.
 * Add enum base type checking per IEEE.
 * Support member-level triggers for virtual interfaces (#5166) (#6148). [Yilou Wang]
 * Support disabling a fork in additional contexts (#5432 partial) (#6174) (#6183). [Ryszard Rozak, Antmicro Ltd.]
